--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -671,6 +671,7 @@
                     </LinearLayout>
                 </LinearLayout>
                 <Button
+                    android:id="@+id/button_show_divecenters"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:background="@color/orange"
