--- a/trunk/ddscanner/app/src/main/res/layout/dive_center_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_center_details.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_bg">
-    <RelativeLayout
+    <include layout="@layout/view_toolbar"/>
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="vertical"
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:layout_height="224dp"
+        android:background="@color/white"
         >
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@android:color/transparent"
-            android:minHeight="?actionBarSize"
-            android:transitionName="toolbar"
-            auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
         <ImageView
             android:id="@+id/dc_logo"
             android:layout_below="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_marginTop="35dp"
             android:layout_height="75dp" />
         <TextView
             android:id="@+id/dc_name"
@@ -33,11 +26,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sharms Dive Centre Diving Hurghada Egypt"
-            android:textSize="@dimen/dc_name_title"
+            android:textSize="20sp"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/black_text"/>
         <LinearLayout
             android:id="@+id/stars"
             android:layout_below="@+id/dc_name"
@@ -46,107 +39,112 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal"></LinearLayout>
-        </RelativeLayout>
-    <RelativeLayout
-        android:layout_below="@+id/header"
+            android:orientation="horizontal"/>
+        </LinearLayout>
+    <ImageView
+        style="@style/DividerStyleFull" />
+
+    <ImageView
+        android:layout_marginTop="15dp"
+        style="@style/DividerStyleFull" />
+    <LinearLayout
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+        <LinearLayout
             android:id="@+id/dc_address_layout"
-            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="75dp">
+            android:layout_height="wrap_content"
+            android:minHeight="55dp"
+            android:orientation="horizontal"
+            android:paddingTop="10dp">
             <ImageView
-                android:id="@+id/ic_dc_location"
-                android:src="@drawable/ic_location_dc"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-            <TextView
-                android:id="@+id/dc_address"
-                android:layout_width="wrap_content"
-                android:layout_height="74dp"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_marginRight="11dp"
-                android:layout_toRightOf="@+id/ic_dc_location"
-                android:text="Steigenberger Al Dau Resort, Yussif Affifi Road, Hurghada, Egypt"
-                android:textSize="@dimen/dc_text_size"
-                android:textColor="@color/black_text"
-                android:gravity="center_vertical"/>
-            <ImageView
-                android:layout_width="match_parent"
+                style="@style/CharacteristicsDiveSpotListIcons"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_toRightOf="@+id/ic_dc_location"
-                android:layout_below="@+id/dc_address"
-                android:src="@drawable/divider"/>
-        </RelativeLayout>
-        <RelativeLayout
+                android:src="@drawable/ic_location_dc" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="Address" />
+
+                <TextView
+                    android:id="@+id/dc_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyle" />
+        <LinearLayout
             android:id="@+id/dc_phone_layout"
-            android:layout_below="@+id/dc_address_layout"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:visibility="gone"
-            android:background="?attr/selectableItemBackground">
+            android:layout_height="wrap_content"
+            android:minHeight="55dp"
+            android:orientation="horizontal"
+            android:background="?attr/selectableItemBackground"
+            android:paddingTop="10dp">
             <ImageView
-                android:id="@+id/ic_dc_phone"
-                android:src="@drawable/ic_phone_dc"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-            <TextView
-                android:id="@+id/dc_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="74dp"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_marginRight="11dp"
-                android:gravity="center"
-                android:layout_toRightOf="@+id/ic_dc_phone"
-                android:text="+385 01 2345 678"
-                android:textSize="@dimen/dc_text_size"
-                android:textColor="@color/black_text"
-               />
-            <ImageView
-                android:layout_width="match_parent"
+                style="@style/CharacteristicsDiveSpotListIcons"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_toRightOf="@+id/ic_dc_phone"
-                android:layout_below="@+id/dc_phone"
-                android:src="@drawable/divider"/>
-        </RelativeLayout>
-        <RelativeLayout
+                android:src="@drawable/ic_phone_dc" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="Phone" />
+
+                <TextView
+                    android:id="@+id/dc_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+        </LinearLayout>
+        <ImageView
+            style="@style/DividerStyle" />
+        <LinearLayout
             android:id="@+id/dc_email_layout"
-            android:layout_below="@+id/dc_phone_layout"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:visibility="gone"
-            android:background="?attr/selectableItemBackground">
+            android:layout_height="wrap_content"
+            android:minHeight="55dp"
+            android:orientation="horizontal"
+            android:background="?attr/selectableItemBackground"
+            android:paddingTop="10dp">
             <ImageView
-                android:id="@+id/ic_dc_email"
-                android:src="@drawable/ic_mail_dc"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-            <TextView
-                android:id="@+id/dc_email"
-                android:layout_width="wrap_content"
-                android:layout_height="74dp"
-                android:gravity="center"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_marginRight="11dp"
-                android:layout_toRightOf="@+id/ic_dc_email"
-                android:text="contact@example.com"
-                android:textSize="@dimen/dc_text_size"
-                android:textColor="@color/black_text" />
-            <ImageView
-                android:layout_alignParentBottom="true"
-                android:layout_width="match_parent"
+                style="@style/CharacteristicsDiveSpotListIcons"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/icons_padding"
-                android:layout_toRightOf="@+id/ic_dc_email"
-                android:layout_below="@+id/dc_email"
-                android:src="@drawable/divider"/>
-        </RelativeLayout>
-    </RelativeLayout>
-</RelativeLayout>
+                android:src="@drawable/ic_mail_dc" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/CharacteristicsDiveSpotListTitle"
+                    android:text="E-mail" />
+
+                <TextView
+                    android:id="@+id/dc_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/depth_title"
+                    android:text="230" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <ImageView
+        style="@style/DividerStyleFull" />
+</LinearLayout>
