--- a/trunk/ddscanner/app/src/main/res/layout/item_people.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_people.xml
@@ -5,10 +5,8 @@
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="wrap_content"
+        android:layout_width="58dp"
         android:layout_height="58dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
         android:scaleType="center"
         android:src="@drawable/avatar_checkin" />
 
