--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
@@ -50,16 +50,31 @@
                 android:padding="10dp"
                 android:src="@drawable/ic_zoom_minus" />
 
-            <ImageView
-                android:id="@+id/go_to_my_location"
+            <RelativeLayout
                 android:layout_width="38dp"
                 android:layout_height="38dp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/zoom_minus"
                 android:layout_marginTop="23dp"
-                android:background="@drawable/background_map_tools"
-                android:padding="10dp"
-                android:src="@drawable/ic_my_location" />
+                android:background="@drawable/background_map_tools">
+                <ImageView
+                    android:id="@+id/go_to_my_location"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_my_location" />
+                <com.rey.material.widget.ProgressView
+                    android:visibility="gone"
+                    android:id="@+id/progressBar"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_centerInParent="true"
+                    app:pv_autostart="true"
+                    app:pv_circular="true"
+                    app:pv_progressMode="indeterminate"
+                    app:pv_progressStyle="@style/CircularProgress" />
+            </RelativeLayout>
+
         </RelativeLayout>
 
         <RelativeLayout
