--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/notif_tab_layout"
@@ -11,10 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@color/white"
-        app:tabMode="fixed" />
+        app:tabMode="fixed"
+        android:visibility="gone"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/notif_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_below="@id/notif_tab_layout"
+        android:visibility="gone"/>
+
+    <include layout="@layout/view_need_to_login" />
+</RelativeLayout>
